--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -14,8 +14,8 @@
                     <attribute name="context">{'default_type':'delivery', 'show_address':1, 'always_reload':1}</attribute>
            </xpath>
            <xpath expr="//field[@name='partner_shipping_id']" position="attributes">
-               <attribute name="domain">['|', ('parent_id', '=', partner_id), ('id', '=', partner_id)]</attribute>
-               <attribute name="context">{'default_type':'delivery', 'show_address':1, 'always_reload':1}</attribute>
+               <attribute name="domain">['|', '|', ('parent_id', '=', partner_id), ('id', '=', partner_id), ('is_multi_ship', '=', True)]</attribute>
+               <attribute name="context">{'default_type':'delivery', 'show_address':1, 'always_reload':1, 'shipment_contact': True}</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="after">
                 <field name="tracking_ref" optional="hide"/>
