--- a/bista_sale/views/sale_templates.xml
+++ b/bista_sale/views/sale_templates.xml
@@ -27,6 +27,17 @@
                 <span t-esc="line.product_template_id.default_code"/> 
             </td>
         </xpath>
+        <xpath expr="//table[@id='sales_order_table']/tbody/t/tr" position="after">
+            <tr style="border-top: none;">
+                <td colspan="2" col="2" style="border-top: none;">
+                    <b><span t-if="line.picking_note">Product Notes:</span></b>
+                    <br/>
+                    <span t-field="line.picking_note"/>
+                </td>
+                <td colspan="5" col="5" style="border-top: none;">
+                </td>
+            </tr>
+        </xpath>
         <xpath expr="//table[@id='sales_order_table']/tbody/t/tr/t/td[@id='product_name']" position="replace">
             <td id="product_name"><span t-field="line.product_template_id.name"/></td>
         </xpath>
