[IMP] CR #19626 - updated PO Line status as per change requested to bookpal team

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -10,6 +10,7 @@
                 <field name="next_followup_date" optional="show" />
                 <field name="note" optional="show" />
             </field>
+            <field name="line_status" position="replace" />
         </field>
     </record>
 
