--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -92,9 +92,9 @@
                     </t>
                 </t>
                 <t t-set="report_tagline" >
-                    <div class="o_boxed_header"  style="margin-top: 0px !important;">
-                        <div style="margin-left: 9rem !important; font-style: italic; font-size:14px;">
-                            <h5 style="margin-bottom: 0rem !important;">Thank you for requesting this quote --Inspiration is just an order away!</h5>
+                    <div class="o_boxed_header"  style="margin-top: 0px !important; margin-bottom: 0rem !important;">
+                        <div style="margin-left: 9rem !important; font-style: italic; font-size:20px;margin-bottom: 0rem !important;">
+                            <h5 style="margin-bottom: 0rem !important;">Thank you for requesting this quote Inspiration is just an order away!</h5>
                             <h5 style="margin-left: 7rem !important;">Please let us Know if you have any questions.</h5>
                         </div>
                     </div>
