[REM] removed dependency from bista_contact

--- a/bista_sale_multi_ship/views/res_partner_view.xml
+++ b/bista_sale_multi_ship/views/res_partner_view.xml
@@ -31,6 +31,9 @@
                 <xpath expr="//field[@name='vat']" position="after">
                     <field name="state" attrs="{'invisible': [('is_multi_ship', '=', False)]}"/>
                 </xpath>
+                <xpath expr="//page[@name='contact_addresses']/field[@name='child_ids']/form/sheet//field[@name='mobile']" position="after">
+                <field name="is_multi_ship"/>
+            </xpath>
         </field>
     </record>
 
