--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -325,7 +325,7 @@
                 <div class="col-6"/>
                 <div name="footer_table" class="col-6 row justify-content-end" style="display:flex;padding:2px;">
                     <div width="70%" style="padding-right:40px;">
-                        <div class="text-right">
+                        <div class="text-right" style="font-size: 14px;">
                             Subtotal
                         </div>
                         <div class="text-right" t-if="doc.amount_tax">
@@ -335,15 +335,15 @@
                             Shipping
                             (<span t-field="doc.carrier_id"/>)
                         </div>
-                        <div class="text-right">
-                            Total
+                        <div class="text-right" style="font-size: 20px;">
+                            <strong>Total</strong>
                         </div>
-                        <div class="text-right text-muted">
+                        <div class="text-right text-muted" style="font-size: 12px;">
                            Total Savings
                         </div>
                     </div>
                     <div width="30%">
-                        <div class="text-right">
+                        <div class="text-right" style="font-size: 14px;">
                             <span t-field="doc.amount_untaxed"  t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </div>
                         <div class="text-right" t-if="doc.amount_tax">
@@ -354,10 +354,10 @@
                                    t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
                             </t>
                         </div>
-                        <div class="text-right">
+                        <div class="text-right" style="font-size: 20px;">
                             <strong t-field="doc.amount_total" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </div>
-                        <div class="text-right">
+                        <div class="text-right text-muted" style="font-size: 12px;">
                             <span t-esc="sum((line.product_uom_qty*line.price_unit)-line.price_subtotal for line in doc.order_line)"
                                         t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </div>
