--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -91,21 +91,11 @@
                         <br/>
                     </t>
                 </t>
-                <t t-set="report_tagline" >
-                    <div class="o_boxed_header"  style="margin-top: 0px !important; margin-bottom: 0rem !important;">
-                        <div style="margin-left: 9rem !important; font-style: italic; font-size:20px;margin-bottom: 0rem !important;">
-                            <t t-if="o.state in ('draft','sent','quote_approval', 'quote_confirm')">
-                                <div class="row">
-                                <span style="margin-bottom: 0rem !important;font-size:20px;" t-esc="o.company_id.quote_tag_line"></span>
-                            </div>
-                            </t>
-                            <t t-else="">
-                                <div class="row">
-                                <span style="margin-bottom: 0rem !important;font-size:20px;" t-esc="o.company_id.so_tag_line"></span>
-                            </div>
-                            </t>
-                            <!-- <h5 style="margin-bottom: 0rem !important;">Thank you for requesting this quote Inspiration is just an order away!</h5> -->
-                            <!-- <h5 style="margin-left: 7rem !important;">Please let us Know if you have any questions.</h5> -->
+                <t t-set="report_tagline">
+                    <div class="o_boxed_header row" style="font-style: italic; font-size: 20px;">
+                        <div class="col-12">
+                            <span t-if="o.state in ('draft','sent','quote_approval', 'quote_confirm')" class="text-center" style="margin-bottom: 0rem !important;font-size:20px;" t-field="o.company_id.quote_tag_line"></span>
+                            <span t-else="" class="text-center" style="margin-bottom: 0rem !important;font-size:20px;" t-field="o.company_id.so_tag_line"></span>
                         </div>
                     </div>
                 </t>
@@ -328,10 +318,10 @@
                         <div class="text-right" style="font-size: 14px;">
                             Subtotal
                         </div>
-                        <div class="text-right" t-if="doc.amount_tax">
+                        <div class="text-right" t-if="doc.amount_tax" style="font-size: 14px;">
                             Tax
                         </div>
-                        <div class="text-right" t-if="doc.carrier_id">
+                        <div class="text-right" t-if="doc.carrier_id" style="font-size: 14px;">
                             Shipping
                             (<span t-field="doc.carrier_id"/>)
                         </div>
@@ -346,10 +336,10 @@
                         <div class="text-right" style="font-size: 14px;">
                             <span t-field="doc.amount_untaxed"  t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </div>
-                        <div class="text-right" t-if="doc.amount_tax">
+                        <div class="text-right" t-if="doc.amount_tax" style="font-size: 14px;">
                             <span t-field="doc.amount_tax" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </div>
-                        <div class="text-right" t-if="doc.carrier_id">
+                        <div class="text-right" t-if="doc.carrier_id" style="font-size: 14px;">
                             <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])" t-if="doc.carrier_id"
                                    t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
                             </t>
