--- a/bista_sale/views/sale_templates.xml
+++ b/bista_sale/views/sale_templates.xml
@@ -86,7 +86,7 @@
             <div class="col-lg-6">
             <strong t-if="sale_order.partner_shipping_id == sale_order.partner_invoice_id" class="d-block mb-1">Invoicing and Shipping Address:</strong>
             <strong t-if="sale_order.partner_shipping_id != sale_order.partner_invoice_id" class="d-block mb-1">Invoicing Address:</strong>
-            <t t-if="sale_order.partner_shipping_id.parent_id.name">
+                <t t-if="sale_order.partner_invoice_id.parent_id.name">
                     <div>
                         <span t-field="sale_order.partner_invoice_id.name"/>
                         <br/>
@@ -97,22 +97,10 @@
                             <span t-field="sale_order.partner_invoice_id.external_company"/>
                         </t>
                     </div>
-                    <span t-if="sale_order.partner_invoice_id.street" t-field="sale_order.partner_invoice_id.street"/>
-                    <span t-if="sale_order.partner_invoice_id.street2" t-field="sale_order.partner_invoice_id.street2"/>
-                    <br t-if="sale_order.partner_invoice_id.city"/>
-                    <span t-if="sale_order.partner_invoice_id.city" t-field="sale_order.partner_invoice_id.city"/>
-                    <span t-if="sale_order.partner_invoice_id.zip" t-field="sale_order.partner_invoice_id.zip"/>
+                    <div t-field="sale_order.partner_invoice_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}'/>
                 </t>
                 <t t-else="">
-                    <br/>
-                    <span t-field="sale_order.partner_invoice_id.name"/>
-                    <br t-if="sale_order.partner_invoice_id.street"/>
-                    <span t-if="sale_order.partner_invoice_id.street" t-field="sale_order.partner_invoice_id.street"/>
-                    <br t-if="sale_order.partner_invoice_id.street2"/>
-                    <span t-if="sale_order.partner_invoice_id.street2" t-field="sale_order.partner_invoice_id.street2"/>
-                    <br t-if="sale_order.partner_invoice_id.city"/>
-                    <span t-if="sale_order.partner_invoice_id.city" t-field="sale_order.partner_invoice_id.city"/>
-                    <span t-if="sale_order.partner_invoice_id.zip" t-field="sale_order.partner_invoice_id.zip"/>
+                    <div t-field="sale_order.partner_invoice_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                 </t>
             </div>
         </div>
@@ -130,22 +118,10 @@
                             <span t-field="sale_order.partner_shipping_id.external_company"/>
                         </t>
                     </div>
-                    <span t-if="sale_order.partner_shipping_id.street" t-field="sale_order.partner_shipping_id.street"/>
-                    <span t-if="sale_order.partner_shipping_id.street2" t-field="sale_order.partner_shipping_id.street2"/>
-                    <br t-if="sale_order.partner_shipping_id.city"/>
-                    <span t-if="sale_order.partner_shipping_id.city" t-field="sale_order.partner_shipping_id.city"/>
-                    <span t-if="sale_order.partner_shipping_id.zip" t-field="sale_order.partner_shipping_id.zip"/>
+                    <div t-field="sale_order.partner_invoice_id" t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}'/>
                 </t>
                 <t t-else="">
-                    <br/>
-                    <span t-field="sale_order.partner_shipping_id.name"/>
-                    <br t-if="sale_order.partner_shipping_id.street"/>
-                    <span t-if="sale_order.partner_shipping_id.street" t-field="sale_order.partner_shipping_id.street"/>
-                    <br t-if="sale_order.partner_shipping_id.street2"/>
-                    <span t-if="sale_order.partner_shipping_id.street2" t-field="sale_order.partner_shipping_id.street2"/>
-                    <br t-if="sale_order.partner_shipping_id.city"/>
-                    <span t-if="sale_order.partner_shipping_id.city" t-field="sale_order.partner_shipping_id.city"/>
-                    <span t-if="sale_order.partner_shipping_id.zip" t-field="sale_order.partner_shipping_id.zip"/>
+                    <div t-field="sale_order.partner_invoice_id" t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                 </t>
             </div>
         </div>
