--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -182,11 +182,16 @@
                     <th style="border: none;" name="th_sn" class="text-center" width="5%">
                         <strong></strong>
                     </th>
-                    <th colspan="2" style=" border-collapse: collapse;
+                    <th style=" border-collapse: collapse;
+                   border: none;" name="th_image" ></th>
+                    <th style=" border-collapse: collapse;
+                   border: none;" name="th_isbn" class="text-center">ISBN
+                    </th>
+                    <th  style=" border-collapse: collapse;
                    border: none;" name="image" class="text-center">Description
                     </th>
                     <th style=" border-collapse: collapse;
-                   border: none;" name="th_quantity" class="text-center">Format
+                   border: none;" name="th_format" class="text-center">Format
                     </th>
                     <th style=" border-collapse: collapse;
                    border: none;" name="th_quantity" class="text-center">Quantity
@@ -227,18 +232,22 @@
                     <br/>
                     <t t-set="sn" t-value="sn+1"/>
                 </td>
-                <td name="image" class="text-center">
+                <td name="image" class="text-left">
                     <t t-if="line.product_id.image_1920">
                         <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}"
-                             style="max-height:100px; max-width:100px;"/>
+                             style="height:80px; width:80px;"/>
                     </t>
                     <t t-else="">
                         <img src="/web/static/img/placeholder.png" style="max-height:100px; max-width:100px;"/>
                     </t>
                 </td>
-                <td name="td_name">
+                <td name="td_sku" class="text-center">
+                    <span t-if="line.product_template_id.default_code" t-field="line.product_template_id.default_code"/>
+                    <span t-if="not line.product_template_id.default_code" t-field="line.product_template_id.isbn"/>
+                </td>
+                <td name="td_name" class="text-center">
                     <b>
-                        <span t-field="line.name"/>
+                        <span t-field="line.product_template_id.name"/>
                     </b>
                 </td>
                 <td name="td_format" class="text-center">
