--- a/bista_stock_remarks/report/sale_report_template.xml
+++ b/bista_stock_remarks/report/sale_report_template.xml
@@ -30,6 +30,7 @@
                     <td style="border: none !important"></td>
                     <td t-if="line_taxes" style="border: none !important"></td>
                     <td style="border: none !important"></td>
+                    <td style="border: none !important"></td>
                 </t>
             </tr>
         </xpath>
