[IMP] CR #19485 - display send email button on every state of tracking PO
(cherry picked from commit ad9ddac12c66357280694af9dd799c72080e99bb)

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -204,7 +204,7 @@
                             <field name="dest_address_id" invisible="1" />
                             <button name="edit_tracking_line" icon="fa-edit" type="object" class="btn-link" style="float: right" />
                             <button name="send_email" string="Send Email" type="object" class="btn-primary"
-                                attrs="{'invisible': ['|', ('dest_address_id', '=', False), ('status', '=', 'on_hold')]}" />
+                                attrs="{'invisible': [('dest_address_id', '=', False)]}" />
                         </tree>
                     </field>
                 </page>
