[IMP] Improved all reports

--- a/bista_sale_multi_ship/report/shipment_report_view.xml
+++ b/bista_sale_multi_ship/report/shipment_report_view.xml
@@ -39,17 +39,17 @@
                     </h4>
                     <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
                         <!-- <strong>Quotation Date:</strong> -->
-                        <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y')"/>
+                        <t t-field="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
                     </t>
                     <t t-if="doc.state in ['order_booked']">
                         <!-- <strong>Booked order date:</strong> -->
-                        <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y')"/>
+                        <t t-field="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
                     </t>
                     <t t-if="doc.state in ['sale','pending_for_approval','credit_review','cancel','done']">
                         <strong>
-                            <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y')"/>
+                            <t t-field="o.date_order" t-options='{"widget": "date"}'/>
                         </strong>
                     </t>
                     <br/>
@@ -177,8 +177,7 @@
                                     <td name="td_nd"
                                         style="border-top: 1px solid black; border-left: none;border-right: none;"
                                         class="text-left">
-                                        <span t-esc="context_timestamp(line.shipping_date).strftime('%m/%d/%Y')"/>
-                                        <!-- <span t-field="line.shipping_date" t-options='{"widget": "date"}'/> -->
+                                        <span t-field="line.shipping_date" t-options='{"widget": "date"}'/>
                                     </td>
                                     <td name="td_quantity"
                                         style="border-top: 1px solid black; border-left: none;border-right: none;"
