--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -15,7 +15,13 @@
                         <div>
                             <span t-field="o.partner_id.name"/>
                             <br/>
-                            <span t-field="o.partner_id.parent_id.name"/>
+                            <!-- <span t-field="o.partner_id.parent_id.name"/> -->
+                            <t t-if="not o.partner_id.external_company">
+                                <span t-field="o.partner_id.parent_id.name"/>
+                            </t>
+                            <t t-else="">
+                                <span t-field="o.partner_id.external_company"/>
+                            </t>
                         </div>
                         <div t-field="o.partner_id"
                              t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
@@ -38,10 +44,16 @@
                         <br/>
                         <span t-field="o.partner_shipping_id.name"/>
                         <br/>
-                        <t t-if="o.partner_shipping_id.parent_id.name">
+                        <!-- <t t-if="o.partner_shipping_id.parent_id.name">
                             <span t-field="o.partner_shipping_id.parent_id.name"/>
                             <br/>
-                        </t>
+                        </t> -->
+                        <t t-if="not o.partner_shipping_id.external_company">
+                                <span t-field="o.partner_id.parent_id.name"/>
+                            </t>
+                            <t t-else="">
+                                <span t-field="o.partner_shipping_id.external_company"/>
+                            </t>
                         <div t-field="o.partner_shipping_id"
                             t-options='{"widget": "contact", "fields": ["address"], "no_marker": True}'/>
                     </div>
@@ -182,7 +194,7 @@
                 <t t-if="o.move_type == 'out_invoice'">
                     <td class="text-center" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.sale_line_ids.discounted_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                        <span t-field="line.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <t t-if="o.move_type == 'in_invoice'">
@@ -222,7 +234,7 @@
         </xpath>
         <xpath expr="//p[@name='payment_term']" position="before">
             <div class="mt-5 mx-0" t-if="o.invoice_pick_note">
-                <strong >Notes</strong>
+                <strong t-if="o.invoice_pick_note">Notes</strong>
                 <p class="mb-1" t-field="o.invoice_pick_note" style="border-top: 1px solid black; margin-top: 1px;"/>
             </div>
         </xpath>
