--- a/bista_purchase/report/purchase_backorder_view.xml
+++ b/bista_purchase/report/purchase_backorder_view.xml
@@ -26,7 +26,7 @@
                                 />
                             </div>
                         </t>
-                        <div class="row">
+                        <div class="row" style="padding-top:8px;">
                             <div class="col-6" name="div_outgoing_address">
                                 <div t-if="o.move_ids_without_package and o.move_ids_without_package[0].partner_id">
                                     <span>
@@ -36,7 +36,13 @@
                                         <div>
                                             <span t-field="o.move_ids_without_package[0].partner_id.name"/>
                                             <br/>
-                                            <span t-field="o.move_ids_without_package[0].partner_id.parent_id.name"/>
+                                            <!-- <span t-field="o.move_ids_without_package[0].partner_id.parent_id.name"/> -->
+                                            <t t-if="not o.move_ids_without_package[0].partner_id.external_company">
+                                                <span t-field="o.move_ids_without_package[0].partner_id.parent_id.name"/>
+                                            </t>
+                                            <t t-else="">
+                                                <span t-field="o.move_ids_without_package[0].partner_id.external_company"/>
+                                            </t>
                                         </div>
                                         <div t-field="o.move_ids_without_package[0].partner_id"
                                              t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
@@ -54,7 +60,12 @@
                                         <div>
                                             <span t-field="o.picking_type_id.warehouse_id.partner_id.name"/>
                                             <br/>
-                                            <span t-field="o.picking_type_id.warehouse_id.partner_id.parent_id.name"/>
+                                            <t t-if="not o.picking_type_id.warehouse_id.partner_id.external_company">
+                                                <span t-field="o.picking_type_id.warehouse_id.partner_id.parent_id.name"/>
+                                            </t>
+                                            <t t-else="">
+                                                <span t-field="o.picking_type_id.warehouse_id.partner_id.external_company"/>
+                                            </t>
                                         </div>
                                         <div t-field="o.picking_type_id.warehouse_id.partner_id"
                                              t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
@@ -86,7 +97,13 @@
                                         <div>
                                             <span t-field="partner.commercial_partner_id.name"/>
                                             <br/>
-                                            <span t-field="partner.commercial_partner_id.parent_id.name"/>
+                                            <!-- <span t-field="partner.commercial_partner_id.parent_id.name"/> -->
+                                            <t t-if="not partner.commercial_partner_id.external_company">
+                                                <span t-field="partner.commercial_partner_id.parent_id.name"/>
+                                            </t>
+                                            <t t-else="">
+                                                <span t-field="partner.commercial_partner_id.external_company"/>
+                                            </t>
                                         </div>
                                         <div t-field="partner.commercial_partner_id"
                                              t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
@@ -108,6 +125,9 @@
                         <table class="table table-sm" name="stock_move_table">
                             <thead>
                                 <tr>
+                                    <th name="th_sm_isbn">
+                                        <strong>ISBN</strong>
+                                    </th>
                                     <th name="th_sm_product">
                                         <strong>Product</strong>
                                     </th>
@@ -119,7 +139,7 @@
                                     </th>
                                     <th name="th_sm_quantity">
                                         <strong>Pending</strong>
-                                        <t t-esc="qty"/>
+                                        <!-- <t t-esc="qty"/> -->
                                     </th>
                                 </tr>
                             </thead>
@@ -127,22 +147,25 @@
                                 <t t-set="lines" t-value="o.move_lines.filtered(lambda x: x.product_uom_qty)"/>
                                 <tr t-foreach="lines" t-as="move">
                                     <td>
-                                        <span t-field="move.product_id"/>
+                                        <span t-field="move.product_id.default_code"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="move.product_id.name"/>
                                         <p t-if="move.description_picking != move.product_id.name and move.description_picking != move.product_id.display_name">
                                             <span t-field="move.description_picking"/>
                                         </p>
                                     </td>
                                     <td>
                                         <span t-field="move.purchase_line_id.product_qty"/>
-                                        <span t-field="move.product_uom"/>
+                                        <span t-field="move.product_uom" t-if="move.purchase_line_id.product_qty"/>
                                     </td>
                                     <td>
                                         <span t-field="move.purchase_line_id.qty_received"/>
-                                        <span t-field="move.product_uom"/>
+                                        <span t-field="move.product_uom" t-if="move.purchase_line_id.qty_received"/>
                                     </td>
                                     <td>
                                         <span t-field="move.product_uom_qty"/>
-                                        <span t-field="move.product_uom"/>
+                                        <span t-field="move.product_uom" t-if="move.product_uom_qty"/>
                                     </td>
                                 </tr>
                             </tbody>
