--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -23,10 +23,10 @@
                                 </strong>
                             </h4>
                             <strong t-if="o.state in ['purchase','done']">Order Date:
-                                <t t-esc="context_timestamp(o.date_approve).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                                <t t-field="o.date_approve" t-options='{"widget": "date"}'/>
                             </strong>
                             <strong t-if="o.state in ['draft','sent']">RFQ Date:
-                                <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                                <t t-field="o.date_order" t-options='{"widget": "date"}'/>
                             </strong>
                             <br/>
                         </div>
@@ -42,11 +42,8 @@
                                     <t t-esc="o.name"/>
                                 </strong>
                             </h4>
-                            <strong t-if="o.state in ['purchase','done']">RFQ Date:
-                                <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
-                            </strong>
-                            <strong t-if="o.state in ['draft','sent']">RFQ Date:
-                                <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                            <strong t-if="o.state in ['purchase','done', 'draft','sent']">RFQ Date:
+                                <t t-field="o.date_order" t-options='{"widget": "date"}'/>
                             </strong>
                             <br/>
                         </div>
