--- a/bista_purchase/report/stock_picking.xml
+++ b/bista_purchase/report/stock_picking.xml
@@ -15,34 +15,34 @@
                     </h3>
                     <t t-if="o.state !='done' and o.picking_type_code =='incoming'">
                         <h5 style="font-size: 20px;">Receipt Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='outgoing'">
                         <h5 style="font-size: 20px;">Delivery Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name =='Pick'">
                         <h5 style="font-size: 20px;">Picking Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name !='Pick'">
                         <h5 style="font-size: 20px;">Internal Transfer Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                             <!-- <t t-esc="o.scheduled_date" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-elif="o.state =='done'">
                         <h5>Validated Date:
-                            <t t-field="o.date_done" t-options='{"widget": "date"}'/>
+                            <span t-field="o.date_done" t-options='{"widget": "date"}'/>
                             <!-- <t t-esc="o.date_done" t-options='{"widget": "date"}'/> -->
                         </h5>
                     </t>
                     <t t-else="">
                         <h5 style="font-size: 20px;">Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <h4>
@@ -214,32 +214,32 @@
                     </h3>
                     <t t-if="o.state !='done' and o.picking_type_code =='incoming'">
                         <h5 style="font-size: 20px;">Receipt Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='outgoing'">
                         <h5 style="font-size: 20px;">Delivery Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name =='Pick'">
                         <h5 style="font-size: 20px;">Picking Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state !='done' and o.picking_type_code =='internal' and o.picking_type_id.name !='Pick'">
                         <h5 style="font-size: 20px;">Internal Transfer Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-elif="o.state =='done'">
                         <h5>Validated Date:
-                            <t t-field="o.date_done" t-options='{"widget": "date"}'/>
+                            <span t-field="o.date_done" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <t t-else="">
                         <h5 style="font-size: 20px;">Date:
-                            <t t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.scheduled_date" t-options='{"widget": "date"}'/>
                         </h5>
                     </t>
                     <h4>
